# player

./: README.md  gitpush.py  main.py  player.py  setup.cfg  setup.py  status_results.txt
player/: choose.py  commands.py  logs  main.py  player.py  threads.py
player/choose/: apagar.py  choose.py  logs  main.py  play.py  play1.py
